fix bottom bar to look better on iphones

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -35,7 +35,7 @@
 
 .list {
   width: 100%;
-  height: calc(100% - 120px);
+  height: calc(100% - 130px);
   overflow-y: auto;
   touch-action: pan-x pan-y;
   overscroll-behavior: contain;
@@ -84,7 +84,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 60px;
+  height: 70px;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -92,6 +92,7 @@
   box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
   z-index: 1000;
   background-color: rgb(25, 118, 210);
+  padding-bottom: 14px;
 }
 
 .bottom_bar:global(.dark) {
